# EventConnect

./: .replit  Dockerfile  aws-setup-guide-corporate.md  aws-setup-guide.md  deploy-code-to-instance.sh  deploy-to-ec2.sh  main.py  package-lock.json  package.json  pyproject.toml  replit.md  run.py  run_fastapi.py  start-dev.sh  start.sh  start_fastapi.sh  test-bedrock-pipeline.py  test_file.js
attached_assets/: Pasted--INIT-START-Runtime-Version-python-3-13-v50-Runtime-Version-ARN-arn-aws-lambda-us-east-1-ru-1754644949657_1754644949658.txt  Pasted--TESTING-DIRECT-UPLOAD-index-owHCGsMC-js-78-Test-file-bedrock-handler-py-530-index-owHCGsMC--1754644109321_1754644109322.txt  Pasted-Aug-08-10-53-40-ip-172-31-34-63-ec2-internal-systemd-1-codereview-ai-service-Failed-with-result--1754650477779_1754650477779.txt  Pasted-Aug-08-11-59-40-ip-172-31-34-63-ec2-internal-python3-11-31486-File-home-ec2-user-EventConnect--1754654493871_1754654493872.txt  Pasted-Default-output-format-Json-json-ec2-user-ip-172-31-34-63-EventConnect-aws-ec2-describe-securi-1754650587501_1754650587503.txt  Pasted-EventConnect-aws-logs-tail-aws-lambda-codereview-ai-processor-since-2m-2025-08-08T08-11-24-4920-1754640749260_1754640749261.txt  Pasted-EventConnect-aws-logs-tail-aws-lambda-codereview-ai-processor-since-30m-2025-08-08T07-43-49-451-1754640577877_1754640577879.txt  Pasted-Here-s-the-final-architecture-flow-and-tech-stack-for-your-project-considering-all-your-updated-poin-1754568760289_1754568760290.txt  content-1754598723472.md
client/: index.html
server/: index.ts  python_storage.py  routes.ts  (+1 more)
(+30 files in other folders)
